# exaspim-flatfield-correction

./: .gitignore  MANIFEST.in  README.md  REPRODUCING.md  Untitled.ipynb  setup.cfg
.codeocean/: app-panel.json  datasets.json  environment.json  resources.json  secrets.json
code/: MANIFEST.in  README.md  run  setup.cfg
code/exaspim_flatfield_correction/: __init__.py  background.py  basic.py  config.py  fitting.py  pipeline.py
code/exaspim_flatfield_correction/utils/: dask_utils.py  mask_utils.py  metadata_utils.py  utils.py  zarr_utils.py
code/src/exaspim_flatfield_correction/: background.py  basic.py  config.py  fitting.py  flatfield.py  pipeline.py  splinefit.py
code/src/exaspim_flatfield_correction/pipeline/: __init__.py  config.py  fitting_config.py  run  run_pipeline.py
code/src/exaspim_flatfield_correction/utils/: mask_utils.py  metadata_utils.py  utils.py  zarr_utils.py
environment/: Dockerfile  environment.yml  postInstall
metadata/: metadata.yml
notebooks/: foreground_background_analysis.ipynb  probability_weight_demo.ipynb
tests/: conftest.py  test_background.py  test_config.py  test_fitting.py  test_fitting_mask.py  test_output_format.py  test_pipeline_cache.py  test_probability_volume.py  test_zarr_utils.py
