[metadata]
name = exaspim_flatfield_correction
version = attr: exaspim_flatfield_correction.__version__
description = Tools for illumination correction of large fluorescence microscopy images.
author = Cameron Arshadi
author_email = cameron.arshadi@alleninstitute.org

[options]
packages = find:
package_dir =
    =code
install_requires =
    pytest==9.0.3
    numpy>=2.1.0
    zarr==3.2.1
    numcodecs
    tifffile
    aind-data-schema==2.6.0
    dask==2026.6.0
    distributed==2026.6.0
    bokeh>=3.3.0
    scipy==1.15.2
    dask-image
    scikit-image
    scikit-learn
    pydantic>=2.6
    hdf5plugin
    s3fs==2025.12.0
    tensorstore==0.1.84
    fsspec
    xarray
    xarray-multiscale==1.2.0
    boto3[crt]==1.41.5
    ujson
    matplotlib
    zarr-io @ git+https://github.com/AllenNeuralDynamics/zarr-io.git@main
    zarr-multiscale @ git+https://github.com/AllenNeuralDynamics/zarr-multiscale.git@main

python_requires = >=3.12
include_package_data = True

[options.entry_points]
console_scripts =
    exaspim-flatfield-run = exaspim_flatfield_correction.pipeline:main

[options.packages.find]
where=code

[options.extras_require]
basicpy =
    basicpy==1.2.0
