[metadata]
name = exaspim_flatfield_correction
version = 0.1.0
description = Tools for illumination correction of large fluorescence microscopy images.
author = Cameron Arshadi
author_email = cameron.arshadi@alleninstitute.org

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
    zarr==2.18.7
    numcodecs
    tifffile
    dask==2024.11.2
    distributed==2024.11.2
    scipy==1.15.2
    dask-image
    scikit-learn
    hdf5plugin
    kerchunk==0.2.6
    s3fs==2025.7.0
    boto3[crt]==1.37.2
    ujson
    matplotlib
    aind-data-transfer[imaging] @ git+https://github.com/AllenNeuralDynamics/aind-data-transfer.git@feat-skip-empty-chunks

python_requires = >=3.11
include_package_data = True

[options.entry_points]
console_scripts =
    exaspim-flatfield-run = exaspim_flatfield_correction.pipeline.run_pipeline:main

[options.packages.find]
where=src

[options.extras_require]
basicpy =
    basicpy==1.2.0
